[package]
name = "ris-live-rs"
version = "0.1.1"
edition = "2018"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/ris-live-rs"
documentation = "https://docs.rs/ris-live-rs"
description = """
RIS-Live real-time BGP data stream crate.
"""
keywords = ["bgp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata]
msrv = "1.46.0"

[dependencies]

serde={version="1.0", features=["derive"]}
serde_json = "1.0.69"
bgp-models = "0.5.0"

# cli-tool dependencies
tungstenite="0.12.0"
structopt = "0.3"

[[bin]]
name="ris-live-reader"
path="src/reader/main.rs"