[package]
name = "ris-live-rs"
version = "0.3.0"
edition = "2018"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/ris-live-rs"
documentation = "https://docs.rs/ris-live-rs"
description = """
RIS-Live real-time BGP data stream crate.
"""
keywords = ["bgp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="ris-live-reader"
path="src/main.rs"

[dependencies]

serde={version="1.0", features=["derive"]}
serde_json = "1.0"
bgpkit-parser = { version = "0.10.11-beta.1", default-features = false, features = ["rislive"]}
ipnet = "2.10"

# cli-tool dependencies
tungstenite="0.24.0"
structopt = "0.3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"
